TestCase/E2E/ContractCodeSummary/v0.3.1/FX100-项目模块与资金方向总结.md
# FX100 项目模块与资金方向总结

> 目的：把 FX100 合约模块、测试动作和资金核对数据统一起来，作为 E2E 场景设计、步骤编排和断言设计的参考。
>
> 代码版本：@v0.3.1 快照（`Github/fx100-contracts@release-v0.3.1` @d9a7fd2，CURRENT.json `comparison`）；主测基线见 `Docs/contract-releases/CURRENT.json`，`primary` 版本差异见 `Docs/contract-releases/v0.3.2/`（01 代码变化 / 03 功能说明 / 04 参数目录）

相关文档：

- [FX100 全字段计算与展示口径（合约 + 页面）](./FX100-核心字段计算公式.md)
- [FX100 合约配置参数总表（CSV）](./FX100-合约配置参数总表.csv)
- [FX100 合约配置参数总表（XLSX 审阅版）](./FX100-合约配置参数总表.xlsx)

## 1. 项目模块划分

从测试设计视角，项目可分为 10 个功能块。

| 编号 | 功能块 | 主要职责 | 典型测试动作 |
| --- | --- | --- | --- |
| 1 | 基础设施与权限 | 部署、角色授权、DataStore、功能开关 | 初始化、授权、撤权、越权调用、关闭功能 |
| 2 | 市场管理 | 创建市场，维护市场参数、持仓量和流动性状态 | 创建市场、配置参数、查询市场、测试市场上限 |
| 3 | LP 资金池 | LP 存款、份额、提现请求、NAV | 存款、申请提现、推进 Epoch、领取、核对份额/NAV |
| 4 | 订单系统 | 创建、更新、取消、冻结和执行订单 | 创建、修改、取消、执行、过期、自动取消 |
| 5 | 仓位与定价 | 多空开仓、加仓、减仓、PnL、资金费、价格影响 | 开仓、加仓、部分平仓、全平、推进时间、改变价格 |
| 6 | 预言机 | Chainlink、Pyth、Data Stream 价格及时间校验 | 设置价格、过期价格、价格偏差、Sequencer 异常 |
| 7 | 风控 | 杠杆、抵押品、清算宽限期、清算、ADL | 临界价格、清算、穿仓、开启/关闭 ADL |
| 8 | 手续费与分配 | 仓位费、清算费、执行费、UI 费、推荐返佣、协议收入 | 收费、补贴、退款、领取、分账、余额守恒 |
| 9 | 用户入口与代理账户 | Router、Relay、EIP-712、普通子账户、子账户代签 | 签名、Nonce、批量下单、子账户限额和过期 |
| 10 | 查询、事件与回调 | Reader、EventEmitter、订单回调、外部调用 | 查询订单/仓位/市场、解析事件、验证回调 |

核心业务链路：

```text
用户 / 子账户 / Relayer
  → Router 创建或更新订单
  → OrderVault 暂存抵押品和执行费
  → Keeper 提交价格并触发执行
  → OrderHandler 校验和路由
  → Increase / Decrease Executor
  → Position、PositionVault、LPVault 状态变化
  → 手续费、返佣、清算或 ADL
  → Reader 和 EventEmitter 对外提供结果
```

## 2. 统一测试动作词

### 2.1 环境动作

- `deployCore`：部署核心合约。
- `grantRole`：授予 Keeper 或 Controller 权限。
- `configureGlobal`：设置全局参数。
- `createMarket`：创建市场。
- `configureMarket`：设置市场参数。
- `seedLiquidity`：给 LPVault 注入流动性。
- `setOraclePrice`：设置价格。
- `advanceTime`：推进时间或 Epoch。

### 2.2 用户动作

- `approveToken`
- `sendCollateral`
- `sendExecutionFee`
- `createOrder`
- `updateOrder`
- `cancelOrder`
- `addSubaccount`
- `signRelayRequest`
- `batchRelayOrders`
- `requestLpWithdraw`
- `claimLpWithdraw`
- `claimFees`

### 2.3 Keeper 动作

- `executeOrder`
- `executeLiquidation`
- `updateAdlState`
- `executeAdl`
- `refreshRecordedPrice`
- `withdrawProtocolFees`

### 2.4 校验动作

- `assertOrder` / `assertOrderRemoved`
- `assertPosition` / `assertPositionRemoved`
- `assertMarketOpenInterest`
- `assertVaultBalance`
- `assertTraderBalance`
- `assertKeeperFee`
- `assertProtocolFee`
- `assertReaderResult`
- `assertEvent`
- `expectRevert`

## 3. 资金核对对象

| 账户或合约 | 资金含义 | 必查数据 |
| --- | --- | --- |
| Trader | 用户抵押品、平仓收入、退款 | ERC20、WNT、原生币余额 |
| OrderVault | 未执行订单的抵押品和执行费 | Token 余额、`tokenBalances`、订单金额 |
| PositionVault | 已开仓抵押品、待领取费用、待支付盈亏 | Token 余额、`tokenBalances` |
| LPVault | LP 流动性、交易对手方盈亏、池子手续费 | Token 余额、`totalAssets`、`totalSupply`、`nav` |
| Keeper | 执行订单或取消订单的 Gas 补偿 | 原生币余额、执行费事件 |
| FeeHandler | 已领取但未最终分发的协议费 | Token 余额、`availableFeeAmount` |
| Fee Receiver / RevenuePool | 最终协议收入接收方 | Token 余额、分账结果 |
| UI Fee Receiver | UI 手续费接收方 | `claimableUiFeeAmount`、领取余额 |
| Affiliate | 推荐返佣接收方 | `claimableAffiliateReward`、领取余额 |
| Holding / Insurance | 异币种资金费、穿仓或保险处理 | Token 余额、`claimableCollateralAmount` |
| Receiver | 订单正常执行后的输出接收地址 | 平仓输出、执行费退款 |
| Cancellation Receiver | 订单取消后的退款地址 | 抵押品退款、执行费剩余退款 |
| Callback Contract | 可能通过回调接收执行费退款 | 回调金额和成功状态 |

## 4. 各业务动作的资金方向

### 4.1 创建加仓订单

```text
Trader ──抵押品──> OrderVault
Trader ──WNT执行费──> OrderVault
```

核对项：

- Trader 抵押品与 WNT/原生币减少量。
- OrderVault 抵押品与 WNT 增加量。
- `order.initialCollateralDeltaAmount`。
- `order.executionFee`。
- OrderVault `tokenBalances[token]`。

闭环关系：

```text
Trader抵押品减少 = OrderVault抵押品增加
Trader执行费减少 = OrderVault WNT增加
```

### 4.2 执行加仓订单

```text
OrderVault抵押品 ──> PositionVault
PositionVault池子手续费 ──> LPVault
OrderVault执行费 ──> Keeper + RefundReceiver/Callback
```

核对项：

- OrderVault 和 PositionVault 实际余额变化。
- LPVault 收到的 `feeAmountForPool`。
- 仓位 `collateralAmount`。
- Keeper 执行费及剩余退款。
- 协议费、UI 费、返佣待领取账本。
- 订单执行后是否删除。

仓位抵押品变化：

```text
collateralDeltaAmount
= 初始抵押品
- totalCostAmount
+ positiveFundingFeeAmount
```

### 4.3 取消加仓订单

```text
OrderVault抵押品 ──> CancellationReceiver；为空时退给Trader
OrderVault执行费 ──> Keeper + 剩余退款接收人
```

闭环关系：

```text
订单抵押品 = 退回抵押品
订单执行费 = Keeper所得 + 用户或回调退款
```

同时核对订单删除和 `OrderCancelled` 事件。

### 4.4 盈利减仓或平仓

```text
LPVault ──盈利PnL──> PositionVault ──最终输出──> Receiver
```

核对项：

- LPVault 支付盈利后的余额。
- PositionVault 收到 PnL 后的变化。
- Receiver 最终收到金额。
- 剩余仓位大小和抵押品。
- `basePnlUsd`、`outputAmount`、各项费用。

概念关系：

```text
Receiver收到
= 提取抵押品
+ 盈利PnL
+ 正资金费
- 仓位费
- UI费
- 负资金费
```

USD PnL 必须按执行价格和抵押品价格转换成 Token 数量后，才能与余额变化比较。

### 4.5 亏损减仓或平仓

```text
PositionVault ──亏损──> LPVault
PositionVault ──剩余抵押品──> Receiver
```

闭环关系：

```text
原仓位抵押品
= 支付给LP的亏损
+ 各项费用
+ Receiver收到
+ 剩余仓位抵押品
```

需要额外核对资不抵债场景中，实际扣款不超过可用抵押品。

### 4.6 资金费

Funding Factor、EMA、按秒计提、仓位结算和用户级边界的集中说明见 [Funding 机制说明与测试矩阵](../../05-Funding机制说明与测试矩阵.md)。

仓位支付资金费：

```text
Position collateral ──> Funding Fee归属或LP侧
```

仓位获得资金费：

```text
LPVault ──> PositionVault ──> 增加仓位抵押品或平仓输出
```

核对数据：

- `negativeFundingFeeAmount`。
- `positiveFundingFeeAmount`。
- 仓位的正负 `fundingFeePerSize`。
- 市场累计 Funding 数据。
- `claimableFeeAmount(..., FUNDING_FEE_TYPE)`。
- LPVault、PositionVault 实际余额。
- Funding 与 PositionFees 相关事件。

v0.3.1 特别约定（@v0.3.1 快照；`primary` 版本是否沿用待复核——减仓输出结构在 v0.3.2 有简化，见 `Docs/contract-releases/v0.3.2/01-代码变化分析.md` §8.5）：

```text
collateralDeltaAmount > 0：仓位抵押品减少
collateralDeltaAmount < 0：仓位抵押品增加
```

`PositionDecrease.collateralDeltaAmount` 必须按 `int256` 解析和断言。

### 4.7 清算

```text
PositionVault
  ├─ 亏损或池子部分 ──> LPVault
  ├─ 清算协议费 ──> 留在PositionVault并登记待领取
  └─ 剩余抵押品 ──> Trader/Receiver
```

核对数据：

- 清算前后 Trader、PositionVault、LPVault 余额。
- `liquidationFeeAmount`。
- `liquidationFeeAmountForFeeReceiver`。
- `feeAmountForPool`。
- `claimableFeeAmount(..., LIQUIDATION_FEE_TYPE)`。
- 清算后仓位是否删除。
- 穿仓时扣款是否被限制在仓位抵押品以内。

实际转账闭环：

```text
-PositionVault变化
= LPVault增加
+ Trader/Receiver增加
+ 其他实际转出
```

注意：仍物理存放在 PositionVault 中、仅登记为 claimable 的费用，不能在实际转账公式中重复计算。

### 4.8 协议费领取与分发

第一阶段：

```text
PositionVault ──> FeeHandler
claimableFeeAmount ──> 0
availableFeeAmount ──> 增加
```

第二阶段：

```text
FeeHandler ──> FeeReceiver / RevenuePool
availableFeeAmount ──> 0
```

核对 PositionVault、FeeHandler、最终接收方余额，以及 RewardSplitter 回调参数和回调后的 allowance。

### 4.9 LP 存取款

存款：

```text
LiquidityProvider assets ──> LPVault
LPVault ──铸造shares──> LiquidityProvider
```

提现：

```text
用户shares ──> LPVault锁定
等待Epoch和提现延迟
LPVault assets ──> LiquidityProvider
锁定shares销毁
```

核对 `totalAssets`、`totalSupply`、用户 shares、`lockedShares`、`nav`、提现请求和到账资产。

## 5. 每个资金用例的标准快照

建议在动作前后保存以下字段：

```text
token
marketIndex
orderKey
positionKey

traderBalance
receiverBalance
cancellationReceiverBalance
keeperNativeBalance

orderVaultBalance
orderVaultRecordedBalance
positionVaultBalance
positionVaultRecordedBalance
lpVaultBalance
feeHandlerBalance
feeReceiverBalance

orderCollateralAmount
orderExecutionFee

positionSizeInUsd
positionSizeInTokens
positionCollateralAmount

claimablePositionFee
claimableLiquidationFee
claimableFundingFee
claimableUiFee
claimableAffiliateReward
availableFeeAmount

lpTotalAssets
lpTotalSupply
lpNav
lpUserShares
lpLockedShares
```

## 6. 四层断言原则

一次完整资金核对必须覆盖四层：

1. **实际余额**：`IERC20(token).balanceOf(account)`，确认 Token 真正位于哪个账户。
2. **内部账本**：`claimableFeeAmount`、`claimableUiFeeAmount` 等，确认资金归属。
3. **业务状态**：订单、仓位、Open Interest、LP shares 等，确认业务计算结果。
4. **事件记录**：PnL、费用、抵押品变化和接收方，确认外部索引数据一致。

最终判断标准：

```text
实际余额闭环
+ DataStore归属闭环
+ 订单/仓位状态闭环
+ 事件字段一致
= 资金方向核对完整
```

## 7. 订单组合维度

订单类型包括：

- `MarketIncrease`
- `LimitIncrease`
- `MarketDecrease`
- `LimitDecrease`
- `StopLossDecrease`
- `Liquidation`
- `StopIncrease`

每类订单应组合以下维度：

| 维度 | 取值 |
| --- | --- |
| 方向 | Long / Short |
| 数量单位 | USD / Token |
| 仓位动作 | 新开、加仓、部分平仓、全平 |
| 价格 | 等于、优于、劣于 acceptablePrice |
| 触发条件 | 未触发、刚好触发、超过触发 |
| 执行费 | 正常、补贴、不足、超上限、退款 |
| 时间 | 立即、validFromTime 前后、请求过期 |
| 入口 | ExchangeRouter、Relay、Subaccount、SubaccountRelay |
| 结果 | 成功、取消、冻结、回滚 |

## 8. 当前测试覆盖与补测重点

当前合约仓库集成测试基线为 50 个通过、0 个失败、0 个跳过。

已覆盖较好的部分：

- 基础部署和市场配置。
- 市价开仓、加仓、平仓。
- Long/Short 成交价方向。
- USD 和 Token 数量订单。
- LP 存款、提现和 NAV。
- 高杠杆清算、清算费和宽限期。
- ADL 状态和 recorded price。
- 执行费支付、补贴、退款和上限。
- Relay、Subaccount Relay 和批量下单。
- 盈利空头部分平仓正资金费回归。
- FeeHandler 普通接收和分账回调。

优先补测：

1. Limit、StopLoss、StopIncrease，以及更新、取消、冻结和过期。
2. 预言机过期、偏差、时间戳、Provider 和 Sequencer 异常。
3. 普通子账户的授权、次数、过期、自动补费和 Integration 禁用。
4. Relay Nonce 重放、签名过期、错误 signer、错误 chain ID 和 Permit 重放。
5. UI Fee、Referral、Affiliate、RevenuePool 全流程。
6. Keeper 越权、有限配置范围和功能关闭。
7. 回调回滚、Gas 不足、恶意接收合约和外部调用限制。
8. Vault 资产守恒、Open Interest 一致性和费用不超收等不变量。

## 9. E2E 环境注意事项

E2E 的唯一配置源为 `Test/config.mjs`。

当前 fork 部署市场编号与 Solidity 本地夹具相反：

| 环境 | ETH 市场 | WBTC 市场 |
| --- | ---: | ---: |
| E2E fork 部署 | 2 | 1 |
| Solidity 本地夹具 | 1 | 2 |

E2E 用例必须从 `config.mjs` 读取市场编号，不能直接复制夹具的 `DEFAULT_MARKET_INDEX`。

开仓类用例还必须确保：

- Trader 有足够 USDC 和原生币。
- LPVault 已有足够 USDC 流动性。
- Keeper 具有 `ORDER_KEEPER`、`ADL_KEEPER`、`LIQUIDATION_KEEPER` 等场景所需角色。
- 所用 RPC 是 fork 环境，而不是真实测试网。
- 私钥只通过安全账户或 keystore 使用，不进入配置和日志。

## 10. 代码索引

- 交易入口：`src/router/ExchangeRouter.sol`
- 订单处理：`src/exchange/OrderHandler.sol`
- 订单结构：`src/order/Order.sol`
- 加仓处理：`src/position/IncreasePositionUtils.sol`
- 减仓处理：`src/position/DecreasePositionUtils.sol`
- 减仓资金结算：`src/position/DecreasePositionCollateralUtils.sol`
- 费用计算：`src/pricing/PositionPricingUtils.sol`
- 执行费：`src/gas/GasUtils.sol`
- 清算：`src/exchange/LiquidationHandler.sol`
- ADL：`src/exchange/AdlHandler.sol`
- LP 资金池：`src/vault/LPVault.sol`
- 订单资金库：`src/bank/OrderVault.sol`
- 仓位资金库：`src/bank/PositionVault.sol`
- 协议费：`src/fee/FeeHandler.sol`
- 查询入口：`src/reader/Reader.sol`
- 本地测试夹具：`test/fixtures/Fx100Setup.t.sol`
- 集成测试：`test/integration/`
